tests/sumo/output/e1/errors/freq_false/errors.sumo
Error: Attribute 'freq' in definition of e1Detector '4/1to3/1' is not a time value.
Quitting (on error).
